--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-jshint": "~0.6.4",
-    "grunt-contrib-qunit": "~0.3.0"
+    "grunt-contrib-qunit": "~0.3.0",
+    "qunitjs": "~1.12.0",
+    "jquery-browser": "~1.10.2",
+    "concat.js": "~0.9.0"
   }
 }
