--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
-  "name": "conkitty",
-  "version": "0.4.4",
-  "description": "Concat.js Template Engine",
-  "main": "conkitty",
-  "directories": {
-    "test": "test",
-    "bin": "bin"
-  },
-  "scripts": {
-    "test": "grunt"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/hoho/conkitty.git"
-  },
-  "keywords": [
-    "conkitty",
-    "templates"
-  ],
-  "author": "Marat Abdullin <dakota@brokenpipe.ru>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/hoho/conkitty/issues"
-  },
-  "bin": {
-      "conkitty": "bin/conkitty"
-  },
-  "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-jshint": "~0.6.4",
-    "grunt-contrib-qunit": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.4",
-    "grunt-contrib-clean": "~0.4.0",
-    "qunitjs": "~1.12.0",
-    "jquery-browser": "~1.10.2",
-    "concat.js": "~0.9.0"
-  }
+    "name": "conkitty",
+    "version": "0.4.5",
+    "description": "Concat.js Template Engine",
+    "main": "conkitty",
+    "directories": {
+        "test": "test",
+        "bin": "bin"
+    },
+    "scripts": {
+        "prepublish": "grunt browser.js",
+        "test": "grunt"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/hoho/conkitty.git"
+    },
+    "keywords": [
+        "conkitty",
+        "templates"
+    ],
+    "author": "Marat Abdullin <dakota@brokenpipe.ru>",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/hoho/conkitty/issues"
+    },
+    "bin": {
+        "conkitty": "bin/conkitty"
+    },
+    "devDependencies": {
+        "grunt": "~0.4.1",
+        "grunt-contrib-jshint": "~0.6.4",
+        "grunt-contrib-qunit": "~0.3.0",
+        "grunt-contrib-uglify": "~0.2.4",
+        "grunt-contrib-clean": "~0.4.0",
+        "qunitjs": "~1.12.0",
+        "jquery-browser": "~1.10.2",
+        "concat.js": "~0.9.0"
+    }
 }
