--- a/example/package.json
+++ b/example/package.json
@@ -5,8 +5,8 @@
 
     "devDependencies": {
         "grunt": "~0.4.1",
-        "grunt-contrib": "~0.7.0",
-        "grunt-conkitty": "~0.2.0",
-        "grunt-contrib-uglify": "~0.2.4"
+        "grunt-contrib-concat": "~0.3.0",
+        "grunt-contrib-watch": "~0.5.3",
+        "grunt-conkitty": "~0.4.8"
     }
 }
