--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,15 @@
 {
     "name": "conkitty",
-    "version": "0.4.9",
+    "version": "0.5.0",
     "homepage": "https://github.com/hoho/conkitty",
     "authors": [
         "Marat Abdullin <dakota@brokenpipe.ru>"
     ],
-    "description": "Concat.js Template Engine",
+    "description": "Template Engine",
     "keywords": [
         "conkitty",
-        "templates"
+        "templates",
+        "dom"
     ],
     "license": "MIT",
     "ignore": [
