--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "bin": {
         "conkitty": "bin/conkitty"
     },
+    "dependencies": {
+        "uglify-js": "~1.3.5"
+    },
     "devDependencies": {
         "grunt": "~0.4.1",
         "grunt-contrib-jshint": "~0.6.4",
