--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "conkitty": "bin/conkitty"
     },
     "dependencies": {
+        "concat.js": "~0.9.1",
         "uglify-js": "~1.3.5"
     },
     "devDependencies": {
@@ -37,8 +38,6 @@
         "grunt-contrib-qunit": "~0.3.0",
         "grunt-contrib-uglify": "~0.2.4",
         "grunt-contrib-clean": "~0.4.0",
-        "qunitjs": "~1.12.0",
-        "jquery-browser": "~1.10.2",
-        "concat.js": "~0.9.0"
+        "qunitjs": "~1.12.0"
     }
 }
