--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     },
     "dependencies": {
         "concat.js": "~0.9.2",
-        "uglify-js": "~1.3.5"
+        "uglify-js": "~1.3.5",
+        "commander": "~2.2.0"
     },
     "devDependencies": {
         "grunt": "~0.4.1",
