Fixing example for 0.5.0.

--- a/example/package.json
+++ b/example/package.json
@@ -1,12 +1,12 @@
 {
     "name"   : "conkitty-example",
-    "version": "0.0.1",
     "private": true,
 
     "devDependencies": {
-        "grunt": "~0.4.1",
+        "grunt": "~0.4.4",
         "grunt-contrib-concat": "~0.3.0",
         "grunt-contrib-watch": "~0.5.3",
-        "grunt-conkitty": "~0.4.8"
+        "grunt-contrib-clean": "~0.4.0",
+        "grunt-conkitty": "~0.5.0"
     }
 }
