--- a/example/package.json
+++ b/example/package.json
@@ -4,9 +4,7 @@
 
     "devDependencies": {
         "grunt": "~0.4.4",
-        "grunt-contrib-concat": "~0.3.0",
-        "grunt-contrib-watch": "~0.5.3",
-        "grunt-contrib-clean": "~0.4.0",
-        "grunt-conkitty": "~0.5.0"
+        "grunt-conkitty": "~0.5.4",
+        "grunt-contrib-watch": "~0.5.3"
     }
 }
