--- a/example2/package.json
+++ b/example2/package.json
@@ -4,9 +4,9 @@
 
     "devDependencies": {
         "gulp": "~3.6.2",
-        "gulp-rename": "~1.2.0",
         "gulp-conkitty": "~0.5.0",
         "gulp-filter": "~0.4.1",
-        "gulp-concat": "~2.2.0"
+        "gulp-concat": "~2.2.0",
+        "gulp-clean": "~0.2.4"
     }
 }
