--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "dependencies": {
         "concat.js": "~0.9.3",
         "uglify-js": "~1.3.5",
-        "commander": "~2.2.0"
+        "commander": "~2.2.0",
+        "source-map": "~0.1.33"
     },
     "devDependencies": {
         "grunt": "~0.4.4",
