--- a/_src/package.json
+++ b/_src/package.json
@@ -19,6 +19,12 @@
         "gulp": "~3.6.2",
         "gulp-eslint": "~0.1.6",
         "gulp-uglify": "~0.2.1",
-        "node-conkitty": "~0.0.2"
+        "gulp-add": "~0.0.1",
+        "gulp-filter": "~0.4.1",
+        "gulp-concat": "~2.2.0",
+        "gulp-rename": "~1.2.0",
+        "gulp-cssmin": "~0.1.5",
+        "gulp-nop": "~0.0.3",
+        "node-conkitty": "~0.0.3"
     }
 }
