--- a/package.json
+++ b/package.json
@@ -31,15 +31,15 @@
         "concat.js": "~0.9.5",
         "uglify-js": "~1.3.5",
         "commander": "~2.3.0",
-        "source-map": "~0.1.43"
+        "source-map": "~0.5.3"
     },
     "devDependencies": {
         "grunt": "~0.4.5",
-        "grunt-contrib-jshint": "~0.10.0",
-        "grunt-contrib-qunit": "~0.5.2",
+        "grunt-eslint": "~17.3.1",
+        "grunt-contrib-qunit": "~0.7.0",
         "grunt-contrib-uglify": "~0.7.0",
-        "grunt-contrib-clean": "~0.6.0",
-        "qunitjs": "~1.17.1",
+        "grunt-contrib-clean": "~0.7.0",
+        "qunitjs": "~1.20.0",
         "assert-version": "~0.0.3"
     }
 }
